# approxier

./: .stylish-haskell.yaml  .travis.yml  README.md  approxier.cabal
src/: Main.hs  VecMath.hs
src/lib/: Bound.hs  Camera.hs  Chess.hs  Cylinder.hs  Disk.hs  GPrim.hs  Hyperboloid.hs  Image.hs  Polynomial.hs  Raster.hs  Raster2.hs  Sample.hs  Scene.hs  Shader.hs  Spectrum.hs  Torus.hs  Trace.hs  VecMath.hs
src/lib/Shapes/: Cylinder.hs  Disk.hs  Hyperboloid.hs  Sphere.hs  Torus.hs
src/lib/Trace/: Cylinder.hs  Disk.hs  Hyperboloid.hs  Torus.hs
