name:                approxier
version:             0.1.0.0
synopsis:            Experimental 3D renderer written in Haskell.
description:         Experimental 3D renderer written in Haskell.
license:             Apache-2.0
license-file:        LICENSE
author:              Jonathan Merritt
maintainer:          j.s.merritt@gmail.com
copyright:           (c) Jonathan Merritt, 2015
category:            Graphics
build-type:          Simple
cabal-version:       >=1.22

source-repository head
  type:     git
  location: https://github.com/lancelet/approxier.git

library
  default-language: Haskell2010
  ghc-options:      -Wall
  build-depends:    base >= 4.8 && < 4.9
  hs-source-dirs:   src/lib
  exposed-modules:
      VecMath

executable approxier
  default-language:    Haskell2010
  main-is:             Main.hs
  ghc-options:         -Wall
  hs-source-dirs:      src
  build-depends:
      base >= 4.8 && < 4.9
    , approxier
