name:                approxier
version:             0.1.0.0
synopsis:            Experimental 3D renderer written in Haskell.
description:         Experimental 3D renderer written in Haskell.
license:             Apache-2.0
license-file:        LICENSE
author:              Jonathan Merritt
maintainer:          j.s.merritt@gmail.com
copyright:           (c) Jonathan Merritt, 2015
category:            Graphics
build-type:          Simple
cabal-version:       >=1.18

source-repository head
  type:     git
  location: https://github.com/lancelet/approxier.git

library
  default-language: Haskell2010
  ghc-options:      -Wall
  build-depends:
      base >= 4.7 && < 4.8
  hs-source-dirs:   src/lib
  exposed-modules:
      Chess
    , VecMath
    , GPrim
    , Trace
    , Trace.Hyperboloid
    , Trace.Cylinder
    , Trace.Disk
    , Trace.Torus

executable approxier
  default-language:    Haskell2010
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -with-rtsopts=-N
  hs-source-dirs:      src
  build-depends:
      base
    , approxier
    , async        >= 2.0.2   && < 2.1
    , random       >= 1.1     && < 1.2
    , JuicyPixels  >= 3.2.5.3 && < 3.3
              