
name:                approxier
version:             0.1.0.0
synopsis:            Experimental 3D renderer written in Haskell.
description:         Experimental 3D renderer written in Haskell.
license:             Apache-2.0
license-file:        LICENSE
author:              Jonathan Merritt
maintainer:          j.s.merritt@gmail.com
copyright:           (c) Jonathan Merritt, 2015
category:            Graphics
build-type:          Simple
cabal-version:       >=1.22

source-repository head
  type:     git
  location: https://github.com/lancelet/approxier.git

library
  default-language: Haskell2010
  ghc-options:      -Wall
  build-depends:
                base         >= 4.8  && < 4.9
              , array        >= 0.5  && < 0.6
              , vector       >= 0.10 && < 0.11
              , JuicyPixels  >= 3.2  && < 3.3
  hs-source-dirs:   src/lib
  exposed-modules:
                  Chess
                , Bound
                , VecMath
                , Camera
                , Polynomial
                , Spectrum
                , Raster
                , Raster2
                , Sample
                , Shader
                , Scene
                , Shapes.Cylinder
                , Shapes.Disk
                , Shapes.Hyperboloid
                , Shapes.Sphere
                , Shapes.Torus
                , Trace

executable approxier
  default-language:    Haskell2010
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -with-rtsopts=-N
  hs-source-dirs:      src
  build-depends:
                base
              , approxier
              , array        >= 0.5 && < 0.6              
              , async        >= 2.0 && < 2.1
              , random       >= 1.1 && < 1.2

              